tests/paczka1/fuzzy1/46589959.err
Error in line 4: wu5 S843 99,4
Error in line 14: ztQ3oR4BG S825 17,5
Error in line 20: oZPTgpqo S825 94,2
Error in line 17: ztQ3oR4BG S843 91,8
Error in line 8: wu5 S825 17,0
Error in line 34: 8U3 A657 13,5
